	  stayed at approximately same level.  (Yura)
	- Automatically update access and change time in ntfs_attr_p{read,write}
	  and ntfs_attr_truncate.  (Yura)
	- Add support of MS_NOATIME flag to ntfs_mount().  (Yura)
	- ntfsclone: --metadata also wipes out the timestamps in the $I30 and
	  in the /$Extend/$Quota:$Q index root attributes.  (Szaka)
	- ntfsmount: Add FreeBSD support.  (Yura)

10/10/2005 - 1.12.1 - Minor fix to location of mount.ntfs-fuse and mkfs.ntfs.

	- Fix hardcoded location for uninstalling mount.ntfs-fuse hardlink to
	  match the relocatable location for installing it.  (Anton, Szaka)
	- Move mount.ntfs-fuse and mkfs.ntfs to be symlinks instead of
	  hardlinks and move both to /sbin rather than prefix/sbin.  Note we
	  still obey $destdir so building packages works as well as installing
	  into alternate chroot / other system still works.  (Anton)
	- ntfscmp: fix some corner cases and all memory leaks; handle corrupt
	  NTFS more gracefully.  (Szaka)
	- If the system does not have realpath(), supply our own dummy version
	  which just copies the string without any kind of checking or
	  expansion.  (Anton)

07/10/2005 - 1.12.0 - Lots of fixes and enhancements!

	- Add ./configure detection for gnutls library and make minimum version
	  1.2.3 which is the one that has the rsa key export fixed.  (Anton)
	- Put in a minimum version for libgcrypt of 1.2.0 as I do not know if
	  our code works with earlier versions.  (Anton)
	- Fix some memory leaks in ntfsdecrypt and do some cleanups.  (Anton)
	- Fix ntfsdecrypt to also work with passwordless files.  Note this
	  requires a patched gnutls library or it still does not work.  (Anton)
	- Add new APIs for index adding/remove:
	    index.[ch]::ntfs_index_add_filename and index.[ch]::ntfs_index_rm.
	  They support only basic cases, so can fail with EOPNOTSUPP.  (Yura)
	- Add new API for index context reinitialization:
	    ntfs_index_ctx_reinit.  (Yura)