@@ -92,6 +92,7 @@ xx/xx/2005 - 1.12.2-WIP
 	- ntfsclone: --metadata also wipes out the timestamps in the $I30 and
 	  in the /$Extend/$Quota:$Q index root attributes.  (Szaka)
 	- ntfsmount: Add FreeBSD support.  (Yura)
+	- ntfsmount: Fix bug with moving non-empty directories.  (Yura)
 
 10/10/2005 - 1.12.1 - Minor fix to location of mount.ntfs-fuse and mkfs.ntfs.
 
